INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src" "${CMAKE_BINARY_DIR}/src")

SET(LTPROTO_ARBITER_SRC	arbiter.c)

ADD_EXECUTABLE(ltproto_arbiter ${LTPROTO_ARBITER_SRC})
TARGET_LINK_LIBRARIES(ltproto_arbiter ltproto)
IF(ENABLE_GPERF_TOOLS MATCHES "ON")
	TARGET_LINK_LIBRARIES(ltproto_arbiter profiler)
ENDIF(ENABLE_GPERF_TOOLS MATCHES "ON")
TARGET_LINK_LIBRARIES(ltproto_arbiter ${OPENSSL_LIBRARIES})