INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src" "${CMAKE_BINARY_DIR}/src")

SET(LTPROTO_TEST_SRC	test_main.c
						test_utils.c)

ADD_EXECUTABLE(ltproto_test ${LTPROTO_TEST_SRC})
TARGET_LINK_LIBRARIES(ltproto_test ltproto)
# For calculating log10
TARGET_LINK_LIBRARIES(ltproto_test m)
IF(ENABLE_GPERF_TOOLS MATCHES "ON")
	TARGET_LINK_LIBRARIES(ltproto_test profiler)
ENDIF(ENABLE_GPERF_TOOLS MATCHES "ON")
EXECUTE_PROCESS(
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/run_test.sh ${CMAKE_CURRENT_BINARY_DIR}/run_test.sh)
EXECUTE_PROCESS(
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/test_lat.sh ${CMAKE_CURRENT_BINARY_DIR}/test_lat.sh)
EXECUTE_PROCESS(
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/plot_lat.py ${CMAKE_CURRENT_BINARY_DIR}/plot_lat.py)