INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/src" "${CMAKE_BINARY_DIR}/src")

SET(LTPROTO_TEST_SRC	test_main.c
						test_utils.c)

ADD_EXECUTABLE(ltproto_test ${LTPROTO_TEST_SRC})
TARGET_LINK_LIBRARIES(ltproto_test ltproto)
IF(ENABLE_GPERF_TOOLS MATCHES "ON")
	TARGET_LINK_LIBRARIES(ltproto_test profiler)
ENDIF(ENABLE_GPERF_TOOLS MATCHES "ON")

SET(ARBITER_TEST_SRC	test_arbiter.c)
ADD_EXECUTABLE(test_arbiter ${ARBITER_TEST_SRC})
TARGET_LINK_LIBRARIES(test_arbiter ltproto)

EXECUTE_PROCESS(
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/run_test.sh ${CMAKE_CURRENT_BINARY_DIR}/run_test.sh)
EXECUTE_PROCESS(
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/test_lat.sh ${CMAKE_CURRENT_BINARY_DIR}/test_lat.sh)
EXECUTE_PROCESS(
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/plot_lat.py ${CMAKE_CURRENT_BINARY_DIR}/plot_lat.py)
EXECUTE_PROCESS(
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/plot_speed.py ${CMAKE_CURRENT_BINARY_DIR}/plot_speed.py)
EXECUTE_PROCESS(
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/test_speed.sh ${CMAKE_CURRENT_BINARY_DIR}/test_speed.sh)